2007-07-13  Fabio Morbec  <fabio@async.com.br>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/comboentry.py (ComboEntry._on_entry__scroll_event):
	If don't have data in the model just return

2007-07-02  Johan Dahlin  <jdahlin@async.com.br>

	* glade3-plugin/setup.py (glade3_exists): Check for
	gladeui-1.0 instead of libgladeui-1.0, fixes #3461

	* kiwi/ui/objectlist.py (ObjectTree): Add a row-expanded signal.
	Based on patch by Ali Afshar, fixes #3460

2007-06-14  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* examples/validation/personalinformation.glade:
	* examples/validation/personalinformation.py: Add a currency widget
	* kiwi/ui/widgets/label.py: Set alignment according to the datatype.

2007-06-09  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* tests/test_tasklet.py: Disable the emission hook test if
	pygobject doens't support it.

	* kiwi/tasklet.py: Misc. pylint fixes and code cleanup.

	* kiwi/tasklet.py (Tasklet.add_join_callback): Allow passing extra
	user arguments to the callback.
	(Tasklet.start): New start() method to bootstrap the tasklet.
	(Tasklet.__init__): Add parameter to allow constructing tasklets
	without starting them.

	* tests/test_tasklet.py (TestWaitForSignal.testEmissionHook): Tesk
	emission hooks.

	* kiwi/tasklet.py (WaitForSignal): Add support for signal emission
	hooks by allowing the programmer to pass a GObject class instead
	of instance.

2007-06-06  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/label.py: Allow string replacements in ProxyLabels

2007-05-31  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/proxy.py:
	* kiwi/ui/widgets/checkbutton.py:
	* kiwi/ui/widgets/combo.py:
	* kiwi/ui/widgets/entry.py:
	* kiwi/ui/widgets/radiobutton.py:
	* kiwi/ui/widgets/textview.py:
	* tests/test_proxy.py:

	Make the proxy call widget.update(ValueUnset) for all