@@ -1,3 +1,8 @@
+2007-07-16  Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/ui/entry.py: Sometimes the entry completion breaks,
+	#2901, patch by Ali Afshar.
+
 2007-07-13  Fabio Morbec  <fabio@async.com.br>
 
 	reviewed by: Johan Dahlin  <jdahlin@async.com.br>
